:sparkles: feature1: Milestone 도메인 완성