@@ -10,6 +10,10 @@ import team1.issue_tracker.label.LabelRepository;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import team1.issue_tracker.milestone.IssueMilestone;
+import team1.issue_tracker.milestone.IssueMilestoneRepository;
+import team1.issue_tracker.milestone.Milestone;
+import team1.issue_tracker.milestone.MilestoneRepository;
 
 @Service
 public class IssueService {
@@ -17,36 +21,41 @@ public class IssueService {
     private final IssueRepository issueRepository;
     private final LabelRepository labelRepository;
     private final IssueLabelRepository issueLabelRepository;
+    private final MilestoneRepository milestoneRepository;
+    private final IssueMilestoneRepository issueMilestoneRepository;
 
     @Autowired
-    public IssueService(IssueRepository issueRepository, LabelRepository labelRepository, IssueLabelRepository issueLabelRepository) {
+    public IssueService(IssueRepository issueRepository, LabelRepository labelRepository,
+                        IssueLabelRepository issueLabelRepository,
+                        MilestoneRepository milestoneRepository, IssueMilestoneRepository issueMilestoneRepository) {
         this.issueRepository = issueRepository;
         this.labelRepository = labelRepository;
         this.issueLabelRepository = issueLabelRepository;
+        this.milestoneRepository = milestoneRepository;
+        this.issueMilestoneRepository = issueMilestoneRepository;
     }
 
 
-    public List<IssueListRes> getList(){
+    public List<IssueListRes> getList() {
         List<Issue> issueList = (List<Issue>) issueRepository.findAll();
 
-        List<IssueListRes> toReturn = new ArrayList<>();
-        issueList.forEach(issue -> toReturn.add(
-                new IssueListRes(
-                        issue.getId(),
-                        issue.getTitle(),
-                        issue.getComment(),
-                        labelsAtIssue(issue.getId()),
-                        new ArrayList<>())
-                ));
-
-        return toReturn;
+        return issueList.stream().map(issue -> new IssueListRes(issue.getId(), issue.getTitle(), issue.getComment(),
+                labelsAtIssue(issue.getId()), milestonesAtIssue(
+                issue.getId()))).toList();
     }
 
 
-    private List<Label> labelsAtIssue(Long issueId){
+    private List<Label> labelsAtIssue(Long issueId) {
         List<IssueLabel> byIssueId = issueLabelRepository.findAllByIssueId(issueId);
 
         return byIssueId.stream().map(issueLabel -> labelRepository.findById(issueLabel.getLabelId()).get()
-        ).collect(Collectors.toList());
+        ).toList();
+    }
+
+    private List<Milestone> milestonesAtIssue(Long issueId) {
+        List<IssueMilestone> byIssueId = issueMilestoneRepository.findAllByIssueId(issueId);
+
+        return byIssueId.stream().map(issueMilestone -> milestoneRepository.findById(issueMilestone.getMilestoneId())
+                .get()).toList();
     }
 }
